--- a/gb/16/10/18/n8407157.md
+++ b/gb/16/10/18/n8407157.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/owzxex343/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/owzxex343/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/owzxex343/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/owzxex343/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/owzxex343/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/owzxex343/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/owzxex343/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/owzxex343/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/owzxex343/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/owzxex343/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/owzxex343/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/owzxex343/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/owzxex343/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/owzxex343/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/owzxex343/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/owzxex343/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/owzxex343/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/owzxex343/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/owzxex343/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/owzxex343/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/owzxex343/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/owzxex343/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/owzxex343/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/owzxex343/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/owzxex343/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/owzxex343/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/owzxex343/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/owzxex343/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/owzxex343/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/owzxex343/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/owzxex343/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/owzxex343/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/owzxex343/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/owzxex343/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/owzxex343/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/owzxex343/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/owzxex343/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/owzxex343/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/owzxex343/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/owzxex343/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/owzxex343/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/owzxex343/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/owzxex343/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/owzxex343/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/owzxex343/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/owzxex343/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/owzxex343/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/xsumwp3307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>安省穷人没药保  重病吃不起药</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/11/us-election-voter-fraud__1200x800-320x200.jpg" />
+
 <h6></h6>
 <hr>
-	<p>【大纪元2016年10月18日讯】（大纪元记者林雪多伦多编译报导）在<ahref="https://github.com/owzxex343/djy/blob/master/gb/tag/%E5%AE%89%E7%9C%81.md#1">安省</a>，不同人群的<ahref="https://github.com/owzxex343/djy/blob/master/gb/tag/%E5%8C%BB%E7%96%97.md#1">医疗</a>存在显着差距。近2/3的安省居民购买医生处方药因为没有药保，只能自掏腰包。如果患了多种疾病，吃药每个月花上几百元很常见，有些人花不起就只能停药。</p>
-<p>据《多伦多星报》报导，<ahref="https://github.com/owzxex343/djy/blob/master/gb/tag/%E5%AE%89%E7%9C%81.md#1">安省</a><ahref="https://github.com/owzxex343/djy/blob/master/gb/tag/%E5%8C%BB%E7%96%97.md#1">医疗</a>质素监督机构HQO上周四公布了一份报告，该份名为“符合标准2016” （Measure Up 2016）的报告显示，是不公平造成这类医疗覆盖面的漏洞。</p>
-<p>报告揭示了安省低收入家庭、低学历人士、新移民和那些生活在贫困社区和偏远地区的居民，在医疗覆盖面上与其他居民存在显着差距，他们多数人的处方药没有<ahref="https://github.com/owzxex343/djy/blob/master/gb/tag/%E4%BF%9D%E9%99%A9.md#1">保险</a>。</p>
-<p>HQO主席、家庭医生泰珀（Joshua Tepper）称，报告数据显示，安省那些低收入的居民没有药物<ahref="https://github.com/owzxex343/djy/blob/master/gb/tag/%E4%BF%9D%E9%99%A9.md#1">保险</a>，这样他们病重后，会导致以后的医疗费用更高。政府在药物上不给他们提供系统支持就会因小失大。</p>
+	<p>【大纪元2016年10月18日讯】（大纪元记者林雪多伦多编译报导）在<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%AE%89%E7%9C%81.md#1">安省</a>，不同人群的<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%8C%BB%E7%96%97.md#1">医疗</a>存在显着差距。近2/3的安省居民购买医生处方药因为没有药保，只能自掏腰包。如果患了多种疾病，吃药每个月花上几百元很常见，有些人花不起就只能停药。</p>
+<p>据《多伦多星报》报导，<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%AE%89%E7%9C%81.md#1">安省</a><ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%8C%BB%E7%96%97.md#1">医疗</a>质素监督机构HQO上周四公布了一份报告，该份名为“符合标准2016” （Measure Up 2016）的报告显示，是不公平造成这类医疗覆盖面的漏洞。</p>
+<p>报告揭示了安省低收入家庭、低学历人士、新移民和那些生活在贫困社区和偏远地区的居民，在医疗覆盖面上与其他居民存在显着差距，他们多数人的处方药没有<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E4%BF%9D%E9%99%A9.md#1">保险</a>。</p>
+<p>HQO主席、家庭医生泰珀（Joshua Tepper）称，报告数据显示，安省那些低收入的居民没有药物<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E4%BF%9D%E9%99%A9.md#1">保险</a>，这样他们病重后，会导致以后的医疗费用更高。政府在药物上不给他们提供系统支持就会因小失大。</p>
 <p>现年62岁的哈密尔顿居民刘易斯（Brian Lewis），对此有深刻体会。他因中风等健康问题已呆在家10年，他每天需服用12种不同的药物。其妻子也患有纤维肌痛、抑郁症等多种疾病，每天要服用3种处方药。好在他们申请了安省安省残障资助计划，否则夫妇俩每个月的医药开支要高达900元。</p>
 <p>根据HQO的报告，处方药支出是安省增长最快的支出之一，占安省公共卫生总支出的16.6％。</p>
 <p>该报告还对安省公费医疗保健系统的其他方面进行了调查，它也看到一些好的方面，如安省吸烟的人数和与吸烟相关疾病正在下降；居民活动不足有所改善；病人等待手术时间比以前短。</p>
@@ -21,48 +21,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/20/11/17/n12554006.md#1">持侨胞卡可获一对一医师线上健康咨询服务</a></li>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/20/11/15/n12550123.md#1">多伦多法轮功解体中共大游行 民众热烈响应</a></li>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/20/11/14/n12549798.md#1">平权会派发爱心包支援防疫一线工作者</a></li>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/20/11/11/n12540151.md#1">黄婉贞参加士嘉堡-爱静阁选区市议员补选</a></li>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/20/11/8/n12532687.md#1">“从启发到领导研讨会”成功举办</a></li>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/20/11/8/n12534238.md#1">三部相关台湾短片亮相多伦多亚洲国际电影节</a></li>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/20/11/7/n12530686.md#1">台湾寻根纪录片亮相多伦多亚洲国际影展</a></li>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/20/10/25/n12501390.md#1">营救12港人 多伦多200人快闪声援</a></li>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/20/10/22/n12492728.md#1">士嘉堡医疗团队推出车中注射流感疫苗服务</a></li>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/20/10/19/n12484814.md#1">台商会汽车剧院分享第二届多伦多台湾影展</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/15/n13737959.md#1">多伦多侨界支持台湾加入世卫大会</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/12/n13734894.md#1">加拿大台湾商会吁世卫邀请台湾与会</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/12/n13733798.md#1">多伦多华商经贸联谊会春游庆母亲节</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/9/n13731446.md#1">多伦多台湾同乡会首办“台湾展”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/2/n13725668.md#1">该是民主阵营终结对台战略模糊的时候</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/4/29/n13722805.md#1">多伦多侨界青年跨域交流研讨会成功举办</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/4/26/n13720593.md#1">多伦多台商会举办2022“台商之夜”晚宴</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/4/24/n13719532.md#1">纪念“4·25” ?多伦多法轮功学员传真相</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/4/23/n13718206.md#1">表彰模范母亲 世华多伦多慈善晚宴五月中登场</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/4/15/n13711890.md#1">【纪元专栏】大卫?乔高的坚韧精神永存</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/3/n10828040.md#1" target="_blank">大饥荒是中共有计划的屠杀手段（中）</a></li><li><a href="https://github.com/owzxex343/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/5/n10539350.md#1" target="_blank">中国奥运泳坛明星经历的人生巨变</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/17/n10309909.md#1" target="_blank">心升：以史为镜看毛邪（中）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/30/n11488493.md#1" target="_blank">苦难中坚守希望 京城姐妹的跌宕人生（2）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/20/11/15/n12550540.md#1">因预言中共病毒爆红 印度男孩预示来年天象</a></li>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/20/11/13/n12546586.md#1">紫微斗数推算  小谈拜登真能登大位吗？</a></li>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/20/11/16/n12553064.md#1">英男声称被外星人绑架 在太空船上遇到歌星</a></li>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/20/11/11/n12542479.md#1">前世五人是同修 今生唯一人受冻挨饿</a></li>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/20/11/17/n12556457.md#1">从《狮子王》经典台词 看天选之王的成长</a></li>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/20/11/19/n12560349.md#1">【西岸观察】CIA FBI CISA 谁在阻挡川普连任？</a></li>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/20/11/19/n12560176.md#1">【拍案惊奇】拜登接过庚子魔咒 川普律师遭恐吓</a></li>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/20/11/19/n12561089.md#1">【珍言真语】理大保卫战留守记者：惨烈牺牲换国际回响</a></li>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/20/11/16/n12554489.md#1">【新闻看点】拜登舞弊证据在握 川普拟大翻盘</a></li>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/20/11/17/n12556437.md#1">国会议员：川普将获胜 使选票得到正确统计</a></li>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/20/11/17/n12556049.md#1">嘉义女子一次拔20颗牙 隔天昏迷 抢救不治</a></li>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/20/11/16/n12554448.md#1">“八路军”住别墅抹发胶 中共抗日剧太雷人</a></li>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/20/11/17/n12554623.md#1">陪孙俪选窗帘意见遭否定 邓超反问获网友趣答</a></li>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/20/11/17/n12556222.md#1">珉豪军中回忆有TWICE的歌 感谢女团给士兵力量</a></li>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/20/11/18/n12559155.md#1">孙俪晒六岁女儿毛笔字 小花版千字文字体工整</a></li>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/20/11/17/n12556732.md#1">林青霞生日出新书 帖文证实与富商丈夫情未变</a></li>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/20/11/17/n12555428.md#1">甘肃男子带“老虎”逛街 路人回头率100%</a></li>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/20/11/13/n12547278.md#1">还在到处发名片？不要让自己成为人脉怪兽</a></li>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/20/11/18/n12557834.md#1">【美食天堂】4种方法长久保存姜～几个月都新鲜！</a></li>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/20/11/11/n12542173.md#1">常喝1种饮料大脑老4岁 这些习惯让脑部老得快</a></li>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/20/11/18/n12557985.md#1">45亿年历史陨石砸破屋顶 印尼男子变大富翁</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740262.md#1">【秦鹏直播】不让戴口罩 李克强和习杠上了？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/19/n13740815.md#1">【微视频】粮价涨多少？美国争论中国关税</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740248.md#1">【远见快评】美媒曝东航坠毁是人为 东航回应</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739318.md#1">备战台海 广东高层会议秘密录音曝光</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739256.md#1">李克强讲话“上墙”党媒争相报 释何信号</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/14/n13736831.md#1">11种营养和饮食 改善成人过动症</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/owzxex343/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/owzxex343/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/10/18/n8407157.htm">安省穷人没药保  重病吃不起药</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/10/18/n8407157.htm">安省穷人没药保  重病吃不起药</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/owzxex343/djy/blob/master/gb/16/10/18/n8407157.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/owzxex343/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owzxex343/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/owzxex343/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/owzxex343/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/owzxex343/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owzxex343/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/owzxex343/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owzxex343/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/owzxex343/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owzxex343/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/owzxex343/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owzxex343/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/owzxex343/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owzxex343/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/owzxex343/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owzxex343/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/owzxex343/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owzxex343/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/owzxex343/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owzxex343/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/owzxex343/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owzxex343/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/owzxex343/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owzxex343/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/owzxex343/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owzxex343/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/owzxex343/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owzxex343/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/owzxex343/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owzxex343/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/owzxex343/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owzxex343/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/owzxex343/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owzxex343/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/owzxex343/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owzxex343/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/owzxex343/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owzxex343/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/owzxex343/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owzxex343/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/owzxex343/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owzxex343/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/owzxex343/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owzxex343/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/owzxex343/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owzxex343/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/owzxex343/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owzxex343/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/xsumwp3307/djy/blob/master/gb/16/10/18/n8407157.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
